--- a/Instagram/Info.plist
+++ b/Instagram/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
+		<key>FirebaseAutomaticScreenReportingEnabled</key>
+		<false/>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 		<key>UISceneConfigurations</key>
