--- a/Instagram/Resources/GoogleService-Info.plist
+++ b/Instagram/Resources/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>936426066669-iuj6e22on24je4aeda9a9ctn8qssigct.apps.googleusercontent.com</string>
+	<string>67122834414-m4r6elth4a9dpfi5bfto9bota8hkd6v7.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.936426066669-iuj6e22on24je4aeda9a9ctn8qssigct</string>
+	<string>com.googleusercontent.apps.67122834414-m4r6elth4a9dpfi5bfto9bota8hkd6v7</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA_uxn5Be-eAhgYwVaZJ-h03sa2x6Y0-WE</string>
+	<string>AIzaSyDTdy_UvLrfm70KB_ig_eGGu9cbJHh2kgA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>936426066669</string>
+	<string>67122834414</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.theoJung.Instagram</string>
 	<key>PROJECT_ID</key>
-	<string>instagram-4553e</string>
+	<string>instagram-38029</string>
 	<key>STORAGE_BUCKET</key>
-	<string>instagram-4553e.appspot.com</string>
+	<string>instagram-38029.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:936426066669:ios:1539b917f38d51b5ab32e4</string>
+	<string>1:67122834414:ios:14fd6957cd381724cf3cff</string>
 </dict>
 </plist>
